--- a/app/src/main/res/layout/item_anime.xml
+++ b/app/src/main/res/layout/item_anime.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:cardCornerRadius="8dp"
     android:elevation="4dp">
 
     <LinearLayout
@@ -38,7 +37,7 @@
                 android:id="@+id/animeEpisodes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Episodes: "
+                android:text="@string/episodes"
                 android:textSize="14sp" />
 
             <TextView
