--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,12 @@
     <style name="Base.Theme.AnimeApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name = "android:windowActionBar">false</item>
+        <item name = "android:windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.AnimeApp" parent="Base.Theme.AnimeApp" />
+    <style name="Theme.AnimeApp" parent="Base.Theme.AnimeApp" >
+        <item name = "android:windowActionBar">false</item>
+        <item name = "android:windowNoTitle">true</item>
+    </style>>
 </resources>
